--- a/.env
+++ b/.env
@@ -46,9 +46,9 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID=123456789
-PUSHER_APP_KEY=asdfghhj
-PUSHER_APP_SECRET=qwertyuiop
+PUSHER_APP_ID='123456789'
+PUSHER_APP_KEY='asdfghhj'
+PUSHER_APP_SECRET='qwertyuiop'
 # PUSHER_HOST=
 # PUSHER_PORT=443
 # PUSHER_SCHEME=https
